Added basic mobile projects page and minor styling to make the nav button more readable during scroll

--- a/src/components/projects/project.css
+++ b/src/components/projects/project.css
@@ -2,7 +2,13 @@ p {
     font-size: 1.4em;
 }
 h2,
-h3 {
+h3,
+h4 {
     font-family: 'Lobster', cursive !important;
     color: black !important;
+}
+
+.autocomplete-input,
+.valuedisplay-container {
+    width: 350px !important;
 }
