--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,36 @@
 @import url('https://fonts.googleapis.com/css?family=Lobster|Tinos');
 
+.top-down-enter,
+.bottom-up-enter {
+    opacity: 0.01;
+}
+
+.top-down-enter.top-down-enter-active,
+.bottom-up-enter.bottom-up-enter-active {
+    opacity: 1;
+    transition: opacity 500ms ease-in;
+}
+.top-down-appear,
+.bottom-up-appear {
+    transform: translateY(100%);
+}
+
+.top-down-appear.top-down-appear-active,
+.bottom-up-appear.bottom-up-appear-active {
+    transform: translateY(0);
+    transition: transform 0.5s ease-in;
+}
+.top-down-leave,
+.bottom-up-leave {
+    opacity: 1;
+}
+
+.top-down-leave.top-down-leave-active,
+.bottom-up-leave.bottom-up-leave-active {
+    opacity: 0.01;
+    transition: opacity 300ms ease-in;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -80,4 +111,10 @@ html {
 
 .Sidebar .nav {
     width: 320px;
+}
+
+@media (min-width: 1100px) {
+    .prev-button{
+        top:10%important;
+    }
 }
